--- a/index.html
+++ b/index.html
@@ -548,8 +548,8 @@
             <div class="footer__bottom">
                 <p>&copy; 2024 Innovation Tech Solutions. All rights reserved.</p>
                 <div class="footer__legal">
-                    <a href="privacy-policy.html" class="footer__link">Privacy Policy</a>
-                    <a href="terms-of-service.html" class="footer__link">Terms of Service</a>
+                    <a href="#" class="footer__link">Privacy Policy</a>
+                    <a href="#" class="footer__link">Terms of Service</a>
                 </div>
             </div>
         </div>
