--- a/index.html
+++ b/index.html
@@ -471,6 +471,16 @@
                         <a href="#" class="footer__social-link" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
                         <a href="#" class="footer__social-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     </div>
+                        <div class="footer__contact" style="margin-top: 1rem; display: flex; flex-direction: column; gap: 0.5rem;">
+                            <span style="display: flex; align-items: center; gap: 0.5em; font-size: 1rem; color: var(--footer-text, #fff);">
+                                <i class="fas fa-phone-alt" aria-hidden="true" style="color: #4caf50;"></i>
+                                <a href="tel:+923225663747" style="color: inherit; text-decoration: none;">+92-3225663747</a>
+                            </span>
+                            <span style="display: flex; align-items: center; gap: 0.5em; font-size: 1rem; color: var(--footer-text, #fff);">
+                                <i class="fas fa-envelope" aria-hidden="true" style="color: #2196f3;"></i>
+                                <a href="mailto:info@innovativetechsolutions.tech" style="color: inherit; text-decoration: none;">info@innovativetechsolutions.tech</a>
+                            </span>
+                        </div>
                 </div>
                 <div class="footer__section">
                     <h4 class="footer__subtitle">Services</h4>
