--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="/securechat" class="nav__link">SecureChat</a></li>
+                    <li class="nav__item"><a href="securechat.html" class="nav__link">SecureChat</a></li>
                     <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
                     <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
                     <li class="nav__item"><a href="#portfolio" class="nav__link">Portfolio</a></li>
