Secure Chat Added

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
             </div>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="securechat.html" class="nav__link">SecureChat</a></li>
                     <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
                     <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
                     <li class="nav__item"><a href="#portfolio" class="nav__link">Portfolio</a></li>
                     <li class="nav__item"><a href="#testimonials" class="nav__link">Testimonials</a></li>
                     <li class="nav__item"><a href="#blog" class="nav__link">Blog</a></li>
+                    <li class="nav__item"><a href="securechat.html" class="nav__link"><i class="fab fa-whatsapp" style="font-size: 1.2em; margin-right: 0.3rem;"></i> WhatsApp Messenger</a></li>
                 </ul>
                 <div class="nav__close" id="nav-close">
                     <i class="fas fa-times"></i>
