--- a/securechat.html
+++ b/securechat.html
@@ -34,9 +34,9 @@
     <!-- Navigation Bar -->
     <header class="sticky top-0 z-50 bg-white shadow-md">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
-            <div class="text-2xl font-extrabold text-primary-blue">
+            <a href="index.html" class="text-2xl font-extrabold text-primary-blue hover:text-blue-700 transition duration-300 cursor-pointer">
                 SecureChat
-            </div>
+            </a>
             <a href="#download" class="px-4 py-2 bg-secondary-green text-white font-semibold rounded-lg shadow-md hover:bg-green-700 transition duration-300">
                 Get Started
             </a>
