--- a/securechat.html
+++ b/securechat.html
@@ -37,6 +37,9 @@
             <a href="index.html" class="text-2xl font-extrabold text-primary-blue hover:text-blue-700 transition duration-300 cursor-pointer">
                 SecureChat
             </a>
+            <div class="text-lg font-bold text-gray-700 hidden sm:block">
+                Starting at <span class="text-secondary-green font-extrabold">$10</span> / month
+            </div>
             <a href="#download" class="px-4 py-2 bg-secondary-green text-white font-semibold rounded-lg shadow-md hover:bg-green-700 transition duration-300">
                 Get Started
             </a>
