--- a/securechat.html
+++ b/securechat.html
@@ -38,7 +38,7 @@
                 SecureChat
             </a>
             <div class="text-lg font-bold text-gray-700 hidden sm:block">
-                Starting at <span class="text-secondary-green font-extrabold">$10</span> / month
+                Starting at <span class="text-secondary-green font-extrabold">$10</span> / month <span class="text-sm text-gray-500 font-normal ml-1">(Unlimited Messages)</span>
             </div>
             <a href="#download" class="px-4 py-2 bg-secondary-green text-white font-semibold rounded-lg shadow-md hover:bg-green-700 transition duration-300">
                 Get Started
