--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Innovation Tech Solutions - Premium IT Services & Solutions</title>
+    <title>Innovative Tech Solutions - Premium IT Services & Solutions</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <meta name="description" content="Innovation Tech Solutions offers comprehensive IT services including web development, app development, cloud services, DevOps, and IT consulting for businesses of all sizes.">
+    <meta name="description" content="Innovative Tech Solutions offers comprehensive IT services including web development, app development, cloud services, DevOps, and IT consulting for businesses of all sizes.">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/hero.css">
@@ -25,9 +25,9 @@
             <div class="nav__brand">
                 <a href="/" class="nav__logo-link">
                     <div class="nav__logo-container" style="padding: 20px !important;">
-                        <img src="images/logo.png" alt="Innovation Tech Solutions Logo" class="nav__logo-img" width="80" height="80">
+                        <img src="images/logo.png" alt="Innovative Tech Solutions Logo" class="nav__logo-img" width="80" height="80">
                     </div>
-                    <span class="nav__logo-text">Innovation Tech Solutions</span>
+                    <span class="nav__logo-text">Innovative Tech Solutions</span>
                 </a>
             </div>
             <div class="nav__menu" id="nav-menu">
@@ -57,7 +57,7 @@
                     <div class="hero__text">
                         <h1 class="hero__title">
                             Transform Your Business with 
-                            <span class="hero__title-gradient">Innovation Tech Solutions</span>
+                            <span class="hero__title-gradient">Innovative Tech Solutions</span>
                         </h1>
                         <p class="hero__description">
                             We deliver cutting-edge IT solutions that drive innovation, enhance efficiency, 
@@ -321,7 +321,7 @@
                                 <i class="fas fa-star"></i>
                             </div>
                             <p class="testimonial__text">
-                                "Innovation Tech Solutions transformed our outdated system into a modern, efficient platform. 
+                                "Innovative Tech Solutions transformed our outdated system into a modern, efficient platform. 
                                 Their expertise and dedication exceeded our expectations."
                             </p>
                             <div class="testimonial__author">
@@ -460,9 +460,9 @@
                 <div class="footer__section">
                     <div class="footer__brand">
                         <div class="footer__logo-container">
-                            <img src="images/logo.png" alt="Innovation Tech Solutions Logo" class="footer__logo" width="80" height="80">
+                            <img src="images/logo.png" alt="Innovative Tech Solutions Logo" class="footer__logo" width="80" height="80">
                         </div>
-                        <h3 class="footer__title">Innovation Tech Solutions</h3>
+                        <h3 class="footer__title">Innovative Tech Solutions</h3>
                     </div>
                     <p class="footer__description">
                         Transforming businesses through innovative IT solutions and cutting-edge technology.
@@ -557,7 +557,7 @@
             </div>
 
             <div class="footer__bottom">
-                <p>&copy; 2024 Innovation Tech Solutions. All rights reserved.</p>
+                <p>&copy; 2024 Innovative Tech Solutions. All rights reserved.</p>
                 <div class="footer__legal">
                     <a href="#" class="footer__link">Privacy Policy</a>
                     <a href="#" class="footer__link">Terms of Service</a>
