--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service - Innovation Tech Solutions</title>
+    <title>Terms of Service - Innovative Tech Solutions</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-                            <p><strong>Innovation Tech Solutions</strong></p>
+                            <p><strong>Innovative Tech Solutions</strong></p>
                             <p>Pakistan</p>
-                            <p>Email: <a href="mailto:info@innovationtech.solutions">info@innovationtech.solutions</a></p> <meta name="description" content="Innovation Tech Solutions Terms of Service - Learn about our service conditions, user agreements, and usage policies.">
+                            <p>Email: <a href="mailto:info@innovativetechsolutions.tech">info@innovativetechsolutions.tech</a></p> <meta name="description" content="Innovative Tech Solutions Terms of Service - Learn about our service conditions, user agreements, and usage policies.">
     <link rel="stylesheet" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -18,8 +18,8 @@
         <nav class="nav container">
             <div class="nav__brand">
                 <a href="/" class="nav__logo-link">
-                    <img src="images/logo.png" alt="Innovation Tech Solutions Logo" class="nav__logo-img">
-                    <span class="nav__logo-text">Innovation Tech Solutions</span>
+                    <img src="images/logo.png" alt="Innovative Tech Solutions Logo" class="nav__logo-img">
+                    <span class="nav__logo-text">Innovative Tech Solutions</span>
                 </a>
             </div>
             <div class="nav__menu" id="nav-menu">
@@ -62,12 +62,12 @@
                     <div class="legal-content__main">
                         <div class="legal-section">
                             <h2>1. Acceptance of Terms</h2>
-                            <p>By accessing and using Innovation Tech Solutions's services, you accept and agree to be bound by the terms and provision of this agreement. If you do not agree to abide by the above, please do not use this service.</p>
+                            <p>By accessing and using Innovative Tech Solutions's services, you accept and agree to be bound by the terms and provision of this agreement. If you do not agree to abide by the above, please do not use this service.</p>
                         </div>
 
                         <div class="legal-section">
                             <h2>2. Service Description</h2>
-                            <p>Innovation Tech Solutions provides comprehensive IT services including but not limited to:</p>
+                            <p>Innovative Tech Solutions provides comprehensive IT services including but not limited to:</p>
                             <ul>
                                 <li>Website design and development</li>
                                 <li>Mobile application development</li>
@@ -125,7 +125,7 @@
                             <h2>6. Intellectual Property Rights</h2>
                             <h3>Our Intellectual Property</h3>
                             <ul>
-                                <li>Innovation Tech Solutions retains all rights to our proprietary technologies</li>
+                                <li>Innovative Tech Solutions retains all rights to our proprietary technologies</li>
                                 <li>Our trademarks, logos, and brand materials are protected</li>
                                 <li>You may not use our intellectual property without permission</li>
                             </ul>
@@ -162,7 +162,7 @@
 
                         <div class="legal-section">
                             <h2>9. Indemnification</h2>
-                            <p>You agree to indemnify and hold Innovation Tech Solutions harmless from any claims, damages, or expenses arising from:</p>
+                            <p>You agree to indemnify and hold Innovative Tech Solutions harmless from any claims, damages, or expenses arising from:</p>
                             <ul>
                                 <li>Your use of our services</li>
                                 <li>Your violation of these terms</li>
@@ -180,7 +180,7 @@
                                 <li>Ongoing projects will be completed or transitioned as agreed</li>
                             </ul>
 
-                            <h3>Termination by Innovation Tech Solutions</h3>
+                            <h3>Termination by Innovative Tech Solutions</h3>
                             <ul>
                                 <li>We may terminate services for breach of terms</li>
                                 <li>Non-payment may result in service suspension</li>
@@ -207,7 +207,7 @@
                             <h2>14. Contact Information</h2>
                             <p>For questions about these Terms of Service, please contact us:</p>
                             <div class="contact-info">
-                                <p><strong>Innovation Tech Solutions</strong></p>
+                                <p><strong>Innovative Tech Solutions</strong></p>
                                 <p>Eden Tower, Gulberg Main Boulevard<br>Lahore, Pakistan</p>
                                 <p>Email: <a href="mailto:info@visionedge.tech">info@visionedge.tech</a></p>
                                 <p>Phone: +92 (300) 123-4567</p>
@@ -254,8 +254,8 @@
             <div class="footer__content">
                 <div class="footer__section">
                     <div class="footer__brand">
-                        <img src="images/logo.png" alt="Innovation Tech Solutions Logo" class="footer__logo">
-                        <h3 class="footer__title">Innovation Tech Solutions</h3>
+                        <img src="images/logo.png" alt="Innovative Tech Solutions Logo" class="footer__logo">
+                        <h3 class="footer__title">Innovative Tech Solutions</h3>
                     </div>
                     <p class="footer__description">
                         Transforming businesses through innovative IT solutions and cutting-edge technology.
@@ -296,7 +296,7 @@
                 </div>
             </div>
             <div class="footer__bottom">
-                <p>&copy; 2024 Innovation Tech Solutions. All rights reserved.</p>
+                <p>&copy; 2024 Innovative Tech Solutions. All rights reserved.</p>
                 <div class="footer__legal">
                     <a href="privacy-policy.html" class="footer__link">Privacy Policy</a>
                     <a href="terms-of-service.html" class="footer__link">Terms of Service</a>
