--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Innova                            <p><strong>Innovation Tech Solutions</strong></p>
+    <title>Privacy Policy - Innovative Tech Solutions</title>
                             <p>Pakistan</p>
                             <p>Email: <a href="mailto:info@innovationtech.solutions">info@innovationtech.solutions</a></p>n Tech Solutions</title>
-    <meta name="description" content="Innovation Tech Solutions Privacy Policy - Learn how we collect, use, and protect your personal information.">
+    <meta name="description" content="Innovative Tech Solutions Privacy Policy - Learn how we collect, use, and protect your personal information.">
     <link rel="stylesheet" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -17,8 +17,8 @@
         <nav class="nav container">
             <div class="nav__brand">
                 <a href="/" class="nav__logo-link">
-                    <img src="images/logo.png" alt="Innovation Tech Solutions Logo" class="nav__logo-img">
-                    <span class="nav__logo-text">Innovation Tech Solutions</span>
+                    <img src="images/logo.png" alt="Innovative Tech Solutions Logo" class="nav__logo-img">
+                    <span class="nav__logo-text">Innovative Tech Solutions</span>
                 </a>
             </div>
             <div class="nav__menu" id="nav-menu">
@@ -61,7 +61,7 @@
                     <div class="legal-content__main">
                         <div class="legal-section">
                             <h2>1. Information We Collect</h2>
-                            <p>At Innovation Tech Solutions, we collect information to provide better services to our users. We collect information in the following ways:</p>
+                            <p>At Innovative Tech Solutions, we collect information to provide better services to our users. We collect information in the following ways:</p>
                             
                             <h3>Personal Information</h3>
                             <ul>
@@ -176,7 +176,7 @@
                             <h2>11. Contact Information</h2>
                             <p>If you have questions about this Privacy Policy or our data practices, please contact us:</p>
                             <div class="contact-info">
-                                <p><strong>Innovation Tech Solutions</strong></p>
+                                <p><strong>Innovative Tech Solutions</strong></p>
                                 <p> Eden Tower, Gulberg Main Boulevard<br>Lahore, Pakistan</p>
                                 <p>Email: <a href="mailto:info@visionedge.tech">info@visionedge.tech</a></p>
                                 <p>Phone: +92 (300) 123-4567</p>
@@ -223,8 +223,8 @@
             <div class="footer__content">
                 <div class="footer__section">
                     <div class="footer__brand">
-                        <img src="images/logo.png" alt="Innovation Tech Solutions Logo" class="footer__logo">
-                        <h3 class="footer__title">Innovation Tech Solutions</h3>
+                        <img src="images/logo.png" alt="Innovative Tech Solutions Logo" class="footer__logo">
+                        <h3 class="footer__title">Innovative Tech Solutions</h3>
                     </div>
                     <p class="footer__description">
                         Transforming businesses through innovative IT solutions and cutting-edge technology.
@@ -265,7 +265,7 @@
                 </div>
             </div>
             <div class="footer__bottom">
-                <p>&copy; 2024 Innovation Tech Solutions. All rights reserved.</p>
+                <p>&copy; 2024 Innovative Tech Solutions. All rights reserved.</p>
                 <div class="footer__legal">
                     <a href="privacy-policy.html" class="footer__link">Privacy Policy</a>
                     <a href="terms-of-service.html" class="footer__link">Terms of Service</a>
